// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiSelect> classNames API uses class name overrides provided 1`] = `
<body>
  <div>
    <div
      class="unique-container"
      role="presentation"
    >
      <div
        class="label-wrapper"
      >
        <div
          class="label"
        >
          <label
            for="test-id-autocomplete"
            id="test-id-label"
          >
            test label
          </label>
        </div>
      </div>
      <div
        class="control-container"
      >
        <div
          class="unique-form-control-children-container"
          role="presentation"
        >
          <div
            aria-labelledby="test-id-label"
            class="unique-tag-list-class"
            role="grid"
          >
            <input
              aria-autocomplete="list"
              aria-controls="test-id-listbox"
              aria-describedby="test-id-empty test-id-autocomplete-tooltip"
              aria-expanded="false"
              aria-haspopup="listbox"
              autocomplete="off"
              class="unique-input-class"
              id="test-id-autocomplete"
              role="combobox"
              value=""
            />
          </div>
          <div
            class="container"
          >
            <svg
              aria-disabled="false"
              class="button"
              height="6"
              role="button"
              tabindex="0"
              width="10"
            >
              <title>
                Open options
              </title>
              <use
                xlink:href="#caret-down.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MultiSelect> has defaults 1`] = `
<body>
  <div>
    <div
      class="container"
      role="presentation"
    >
      <div
        class="label-wrapper"
      >
        <div
          class="label"
        >
          <label
            for="test-id-autocomplete"
            id="test-id-label"
          >
            test label
          </label>
        </div>
      </div>
      <div
        class="control-container"
      >
        <div
          class="form-control-children-container"
          role="presentation"
        >
          <div
            aria-labelledby="test-id-label"
            class="tag-list"
            role="grid"
          >
            <input
              aria-autocomplete="list"
              aria-controls="test-id-listbox"
              aria-describedby="test-id-empty test-id-autocomplete-tooltip"
              aria-expanded="false"
              aria-haspopup="listbox"
              autocomplete="off"
              class="input"
              id="test-id-autocomplete"
              role="combobox"
              value=""
            />
          </div>
          <div
            class="container"
          >
            <svg
              aria-disabled="false"
              class="button"
              height="6"
              role="button"
              tabindex="0"
              width="10"
            >
              <title>
                Open options
              </title>
              <use
                xlink:href="#caret-down.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MultiSelect> has defaults 2`] = `
Object {
  "contains": [Function],
  "dirty": false,
  "id": "test-id",
  "name": "field-id",
  "value": Array [],
}
`;

exports[`<MultiSelect> id API sets various ids 1`] = `
<body>
  <div>
    <div
      class="container"
      role="presentation"
    >
      <div
        class="label-wrapper"
      >
        <div
          class="label"
        >
          <label
            for="unique-id-autocomplete"
            id="unique-id-label"
          >
            test label
          </label>
        </div>
      </div>
      <div
        class="control-container"
      >
        <div
          class="form-control-children-container"
          role="presentation"
        >
          <div
            aria-labelledby="unique-id-label"
            class="tag-list"
            role="grid"
          >
            <div
              class="tag"
              id="unique-id-option-1"
              role="row"
            >
              <span
                class="content"
                id="unique-id-option-1-content"
                role="gridcell"
                tabindex="0"
              >
                Foo
              </span>
              <span
                class="icon-wrapper"
                role="gridcell"
                tabindex="-1"
              >
                <svg
                  aria-disabled="false"
                  aria-labelledby="unique-id-option-1-button unique-id-option-1-content"
                  class="icon"
                  height="8"
                  role="button"
                  tabindex="-1"
                  width="8"
                >
                  <title
                    id="unique-id-option-1-button"
                  >
                    Remove
                  </title>
                  <use
                    xlink:href="#clear.svg"
                  />
                </svg>
              </span>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="unique-id-listbox"
              aria-describedby="unique-id-empty unique-id-autocomplete-tooltip"
              aria-expanded="false"
              aria-haspopup="listbox"
              autocomplete="off"
              class="input"
              id="unique-id-autocomplete"
              role="combobox"
              value=""
            />
          </div>
          <div
            class="container"
          >
            <svg
              aria-disabled="false"
              class="icon-clear"
              height="8"
              role="button"
              tabindex="0"
              width="8"
            >
              <title>
                Remove all selected options
              </title>
              <use
                xlink:href="#clear.svg"
              />
            </svg>
            <svg
              aria-disabled="false"
              class="button"
              height="6"
              role="button"
              tabindex="0"
              width="10"
            >
              <title>
                Open options
              </title>
              <use
                xlink:href="#caret-down.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
